# oisy-trade

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  REVIEW.md  cliff.toml  icp.yaml  justfile  mise.toml  release-plz.toml  release_notes.md
.claude/agents/: implementer.md  reviewer.md
.github/repo_policies/: BOT_APPROVED_FILES
.github/workflows/: book.yml  canbench-post-comment.yml  ci.yml  publish.yml  release.yml
.icp/data/mappings/: prod.ids.json  staging.ids.json
canister/: CHANGELOG.md  Cargo.toml  canbench.yml  canbench_results.yml  dex.did  hidden_endpoints.conf  no_compat_endpoints.conf  oisy_trade.did
canister/proptest-regressions/: tests.txt
canister/proptest-regressions/order/: tests.txt
canister/proptest-regressions/state/: tests.txt
canister/src/: benchmarks.rs  dashboard.rs  lib.rs  lifecycle.rs  main.rs  metrics.rs  storage.rs  test_fixtures.rs  tests.rs
canister/src/balance/: cache.rs  mod.rs  stable.rs  stable_tests.rs  tests.rs  token.rs  user.rs
canister/src/cbor/: mod.rs  tests.rs
canister/src/dashboard/: mod.rs  tests.rs
canister/src/execute/: mod.rs  tests.rs
canister/src/guard/: mod.rs  tests.rs
canister/src/history/: mod.rs  tests.rs
canister/src/ids/: mod.rs  tests.rs
canister/src/ledger/: mod.rs
canister/src/lifecycle/: mod.rs  tests.rs
canister/src/metrics/: mod.rs
canister/src/order/: book.rs  fees.rs  fill.rs  history.rs  ids.rs  mod.rs  plan.rs  stable_book.rs  stable_book_tests.rs  tests.rs  user_orders.rs
canister/src/order/fills/: mod.rs  tests.rs
canister/src/order/history/: mod.rs  tests.rs
canister/src/order/ids/: mod.rs  tests.rs
canister/src/order/iter/: mod.rs  tests.rs
canister/src/order/queue/: mod.rs  tests.rs
canister/src/order/trades/: mod.rs  tests.rs
canister/src/order/user_orders/: tests.rs
canister/src/runtime/: mod.rs
canister/src/settlement/: mod.rs  tests.rs
canister/src/state/: audit.rs  event.rs  mod.rs  order_history.rs  snapshot.rs  tests.rs  trading_pair_map.rs
canister/src/state/audit/: mod.rs  tests.rs
canister/src/state/event/: mod.rs  tests.rs
canister/src/state/execution_policy/: mod.rs  tests.rs
canister/src/state/map/: mod.rs  tests.rs  trading_pair_map.rs
canister/src/state/permissions/: mod.rs  tests.rs
canister/src/state/snapshot/: mod.rs  tests.rs
canister/src/storage/: mod.rs  tests.rs
canister/src/test_fixtures/: event.rs  mod.rs  order.rs  tokens.rs
canister/src/user/: mod.rs  tests.rs
canister/templates/: dashboard.html
docs/: book.toml  design.md  price-width-benchmark.md  runbook-circuit-breakers.md
docs/specs/: DEFI-2801-error-envelope.md  DEFI-2849-circuit-breaker.md  DEFI-2850-min-max-notional.md  DEFI-2852-order-status-partial-fill.md  TEMPLATE.md
docs/src/: SUMMARY.md  introduction.md
docs/src/development/: design.md
docs/src/development/architecture/: design.md  index.md
docs/src/development/specs/: DEFI-2801-error-envelope.md  DEFI-2849-circuit-breaker.md  DEFI-2850-min-max-notional.md  DEFI-2853-add-fill-or-kill-orders-fok.md  DEFI-2861-auto-routing-orders.md  DEFI-2901-persist-fills.md  DEFI-2911-funding-and-trading-accounts.md  DEFI-2942-replay-mainnet-events.md  DEFI-2943-anonymous-principal-restrictions.md  index.md  template.md
docs/src/reference/: changelog.md  release-notes.md
docs/src/usage/: for-admins.md  for-agents.md  for-users.md
docs/src/usage/for-admins/: admin.md
docs/src/usage/for-users/: agents.md  index.md
docs/trading_data/: 2026_04_04_binance_agg_trades_ICPUSDT.json  2026_04_04_binance_depth_ICPUSDT.json  2026_04_04_binance_historical_trades_ICPBTC.json  2026_04_04_binance_historical_trades_ICPUSDT.json  2026_04_04_binance_klines_1h_ICPBTC.json  2026_04_04_binance_klines_1h_ICPUSDT.json  2026_04_04_binance_ticker_24hr_ICPUSDT.json  README.md
examples/: admin.ipynb  admin.md  agents.md  getting_started.ipynb  getting_started.md
integration_tests/: Cargo.toml
integration_tests/src/: deposit_flow.rs  events.rs  fee_fill.rs  icrc_ledger.rs  lib.rs
integration_tests/tests/: mainnet_snapshot.rs  replay_mainnet.rs  tests.rs
libs/client/: Cargo.toml  README.md
libs/client/src/: lib.rs
libs/types/: CHANGELOG.md  Cargo.toml  README.md
libs/types-internal/: Cargo.toml  README.md
libs/types-internal/src/: cbor.rs  event.rs  lib.rs  log.rs
libs/types/src/: lib.rs  tests.rs
libs/types/src/error/: mod.rs  tests.rs
scripts/: ci_download_canbench_artifacts.sh  ci_post_run_benchmark.sh  ci_run_benchmark.sh  download-external-wasms.sh  staging_reinstall_and_list_pairs.sh  strip_candid_methods.py
trading_data/: 2026_04_04_binance_agg_trades_ICPBTC.json  2026_04_04_binance_depth_ICPBTC.json  2026_04_04_binance_ticker_24hr_ICPBTC.json  README.md
