[workspace]
resolver = "2"
members = [
    "canister",
    "integration_tests",
    "libs/client",
    "libs/types",
    "libs/types-internal",
]

[workspace.package]
authors = ["DFINITY Stiftung"]
edition = "2024"
repository = "https://github.com/dfinity/oisy-trade"
homepage = "https://github.com/dfinity/oisy-trade#readme"
license = "Apache-2.0"
readme = "README.md"

[workspace.dependencies]
assert_matches = "1"
async-trait = "0.1.89"
canbench-rs = "0.6"
candid = "0.10.29"
candid_parser = "0.4.0"
canlog = "0.2.0"
ic-cdk = "0.20.1"
ic-cdk-timers = "1.0.0"
ic-http-types = "0.1.0"
ic-metrics-assert = "0.5"
ic-metrics-encoder = "1"
ic-stable-structures = "0.7.2"
icrc-cbor = "0.1.0"
icrc-ledger-types = "0.2.0"
minicbor = "0.19.1"
mockall = "0.14.0"
num-bigint = "0.5.1"
pocket-ic = "13.0.0"
proptest = "1"
scopeguard = "1"
scraper = "0.27"
serde = "1.0.228"
serde_json = "1"
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2"
tokio = "1.52.3"

[profile.release]
# No debug info: smaller WASM, and avoids embedding host paths via DWARF.
debug = false
# Link-time optimization: cross-crate inlining and dead-code elimination.
lto = true
# Strip remaining symbols and section names from the final binary.
strip = true
# Optimize for size; WASM upload and instantiation cost dominate over raw CPU
# throughput on the IC.
opt-level = 's'
# Single codegen unit: deterministic codegen ordering regardless of host CPU
# count. Required for reproducible builds; pairs with `lto = true`.
codegen-units = 1
# Replace unwind machinery with immediate abort. Smaller WASM, simpler control
# flow; panics on the IC trap anyway.
panic = "abort"
