[package]
name = "oisy_trade_canister"
version = "0.0.0"
description = "OISY TRADE canister on the Internet Computer."
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[[bin]]
name = "oisy_trade_canister"
path = "src/main.rs"

[features]
canbench-rs = ["dep:canbench-rs", "dep:serde_json", "dep:serde", "dep:strum"]

[dependencies]
askama = "0.16"
async-trait = { workspace = true }
bimap = { version = "0.6.3", default-features = false }
canbench-rs = { workspace = true, optional = true }
candid = { workspace = true }
canlog = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-http-types = { workspace = true }
ic-metrics-encoder = { workspace = true }
ic-stable-structures = { workspace = true }
icrc-cbor = { workspace = true }
icrc-ledger-types = { workspace = true }
minicbor = { workspace = true, features = ["derive"] }
num-bigint = { workspace = true }
oisy_trade_types = { path = "../libs/types" }
oisy_trade_types_internal = { path = "../libs/types-internal", features = ["event", "log"] }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
strum = { workspace = true, optional = true }

[dev-dependencies]
assert_matches = { workspace = true }
candid_parser = { workspace = true }
mockall = { workspace = true }
proptest = { workspace = true }
scraper = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
