[package]
name = "dex_int_tests"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
candid = { workspace = true }
canlog = { workspace = true }
dex_client = { path = "../libs/client" }
dex_types = { path = "../libs/types" }
dex_types_internal = { path = "../libs/types-internal", features = ["log"] }
ic-cdk = { workspace = true }
ic-http-types = { workspace = true }
icrc-ledger-types = { workspace = true }
pocket-ic = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
assert_matches = "1"
tokio = { workspace = true }
