[package]
name = "oisy_trade_int_tests"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
candid = { workspace = true }
canlog = { workspace = true }
ic-cdk = { workspace = true }
ic-http-types = { workspace = true }
ic-metrics-assert = { workspace = true }
icrc-ledger-types = { workspace = true }
oisy_trade_client = { path = "../libs/client", version = "0.2.0" }
oisy_trade_types = { path = "../libs/types", version = "0.3.0" }
oisy_trade_types_internal = { path = "../libs/types-internal", version = "0.2.0", features = ["log"] }
pocket-ic = { workspace = true }
scopeguard = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
tokio = { workspace = true }
