[package]
name = "oisy_trade_client"
version = "0.0.0"
description = "Client to interact with the OISY TRADE canister"
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme = "README.md"
include = ["src", "Cargo.toml", "CHANGELOG.md", "LICENSE", "README.md"]

[dependencies]
async-trait = { workspace = true }
candid = { workspace = true }
ic-cdk = { workspace = true }
oisy_trade_types = { path = "../types" }
serde = { workspace = true }
