[package]
name = "dex_types_internal"
version = "0.1.0"
description = "Internal types used by the DEX canister"
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[features]
log = ["dep:canlog", "dep:serde"]

[dependencies]
canlog = { workspace = true, features = ["derive"], optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
