[package]
name = "dex_types_internal"
version = "0.1.0"
description = "Internal types used by the DEX canister"
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme = "README.md"
include = ["src", "Cargo.toml", "CHANGELOG.md", "LICENSE", "README.md"]

[features]
log = ["dep:canlog", "dep:serde"]

[dependencies]
candid = { workspace = true }
canlog = { workspace = true, features = ["derive"], optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
