[package]
name = "oisy_trade_types_internal"
version = "0.1.0"
description = "Internal types used by the OISY TRADE canister"
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme = "README.md"
include = ["src", "Cargo.toml", "CHANGELOG.md", "LICENSE", "README.md"]

[features]
event = ["dep:icrc-cbor", "dep:minicbor"]
log = ["dep:canlog"]

[dependencies]
candid = { workspace = true }
canlog = { workspace = true, features = ["derive"], optional = true }
icrc-cbor = { workspace = true, optional = true }
minicbor = { workspace = true, features = ["derive"], optional = true }
oisy_trade_types = { path = "../types", version = "0.2.0" }
serde = { workspace = true, features = ["derive"] }
